# bmq

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
app/: __main__.py  _types.py  compressor.py  logger.py  manager.py  rmq_wait.py
app/bot/: __init__.py  ibot.py
app/bot/tg/: filters.py  tg_bot.py
app/bus/: __init__.py  ibus.py  redis.py  rmq.py
app/compress/: __init__.py  gzip.py  icompress.py
app/compress/protobuf/: message_pb2.py  protobuf.py
app/compress/protobuf/proto/: message_pb2.py
app/config/: app.py  bus.py  idle.py  jabber.py  rmq.py  tg.py  types.py
app/domain/: manager.py  receiver.py  replayer.py
app/domain/services/: __init__.py  iservice.py  receiver.py  receiver_service.py  replayer.py  replayer_service.py
app/im/: __init__.py  dto.py  ibot.py
app/im/jabber/: dispatcher.py  jabber_bot.py
app/im/tg/: tg_bot.py
docker/: docker-compose.app.yaml  docker-compose.app.yaml.example  docker-compose.infra.yaml
proto/: message.proto
