[tool.poetry]
name = "mqbot"
version = "0.1.0"
description = ""
authors = ["ZeroTwo <hau.au.999@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.64"
TgCrypto = "^1.2.5"
aio-pika = "^8.2.5"
protobuf = "^4.21.12"
aioxmpp = "^0.13.2"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
flake8-isort = "^5.0.3"
pep8-naming = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
